ml_core, camera: Enable OpenVINO model caching
Enable ml-core-cacher to cache OpenVINO models when
intel_openvino_delegate IUSE flag is set. OpenCL caching will always
run, no changes in behavior.

BUG=b:356770559
TEST=[chroot] emerge & deploy dev-libs/ml-core cros-camera cros-camera-libs
TEST=[dut] start ml-core-cacher && restart cros-camera
TEST=[dut] Check frame drops on camera open + VC + NPU

Cq-Depend: chromium:5782474
Change-Id: If437863f9b3f531ac0252b6d45841de5b21c3372
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5758902
Tested-by: Imran Ziad <imranziad@chromium.org>
Reviewed-by: Shik Chen <shik@chromium.org>
Reviewed-by: Tim Bain <tbain@google.com>
Commit-Queue: Imran Ziad <imranziad@chromium.org>

--- a/camera/hal_adapter/init/cros-camera.conf
+++ b/camera/hal_adapter/init/cros-camera.conf
@@ -97,6 +97,11 @@ script
   NPU_ARGS=''
   if [ -d /etc/openvino ]; then
     NPU_ARGS='-b /etc/openvino'
+    # Need access to /var/lib/ml_core/openvino_cache to read effects
+    # OpenVINO models cache.
+    if [ -d /var/lib/ml_core/openvino_cache ]; then
+      NPU_ARGS="$NPU_ARGS -b /var/lib/ml_core/openvino_cache"
+    fi
   fi
 
   # Need access to /etc/tflite to read stable delegate settings file. The path
