--- a/ml_core/cacher/init/ml-core-cacher.conf
+++ b/ml_core/cacher/init/ml-core-cacher.conf
@@ -5,7 +5,7 @@
 description "Compilation cacher for ML models used by ml-core"
 author "chromium-os-dev@chromium.org"
 
-start on start-user-session and stopped imageloader-init
+start on start-user-session and started system-services and stopped imageloader-init
 stop on stopping ui
 
 oom score -100
@@ -17,5 +17,28 @@ expect fork
 # GPU/NPU. This happens on the GPU/NPU itself, and so the sandbox needs
 # access to those devices.
 
-exec minijail0 --config /usr/share/minijail/ml-core-cacher.conf \
-    -- /usr/bin/ml_core_cacher
+script
+  # Addiotinal conditional args here, because minijail-config-file doesn't
+  # support conditional args.
+  EXTRA_ARGS=""
+
+  # Need access to /etc/openvino to read OpenVINO config file for Intel NPU.
+  # The path only exists on NPU-enabled devices, so we mount it conditionally.
+  if [ -d /etc/openvino ]; then
+    EXTRA_ARGS="$EXTRA_ARGS -b /etc/openvino"
+  fi
+
+  # Need access to /etc/ml_core to read tflite stable delegate settings file.
+  if [ -d /etc/ml_core ]; then
+    EXTRA_ARGS="$EXTRA_ARGS -b /etc/ml_core"
+  fi
+
+  # Need access to /var/lib/ml_core/openvino_cache to write cache back to disk.
+  if [ -d /var/lib/ml_core/openvino_cache ]; then
+    EXTRA_ARGS="$EXTRA_ARGS -b /var/lib/ml_core/openvino_cache,,1"
+  fi
+
+  exec minijail0 --config /usr/share/minijail/ml-core-cacher.conf \
+      ${EXTRA_ARGS} \
+      -- /usr/bin/ml_core_cacher
+end script
