--- a/ml_core/cacher/minijail/ml-core-cacher.conf
+++ b/ml_core/cacher/minijail/ml-core-cacher.conf
@@ -10,7 +10,6 @@
 # -u run as user ml-core
 # -g run as group ml-core
 # -G to be in video group to access /dev/video*.
-# --profile=minimalistic-mountns to set up a mostly empty pivot root
 #
 # Namespaces:
 # -N enter new cgroup namespace
@@ -18,9 +17,12 @@
 # -l enter new IPC namespace
 # -e enter new network namespace
 # -v enter new mount namespace
+# -r remount /proc read-only
+# -t mount tmpfs at /tmp
 #
 # Mounts:
 # -Kslave to propagate mount events (like DLC installation)
+# -P /mnt/empty, pivot_root to /mnt/empty
 # -b /dev/dri for GPU access
 # -k to mount tmpfs at /run
 # -k to mount tmpfs at /sys
@@ -40,14 +42,18 @@ N
 p
 l
 e
+r
+t
 ns-mount
 K = slave
-profile = minimalistic-mountns
+P = /mnt/empty
+bind-mount = /
+bind-mount = /dev
 bind-mount = /dev/dri
 mount = tmpfs,/run,tmpfs,MS_NOSUID|MS_NODEV|MS_NOEXEC
 mount = tmpfs,/sys,tmpfs,MS_NODEV|MS_NOEXEC|MS_NOSUID,mode=755
 mount = tmpfs,/var,tmpfs,MS_NOSUID|MS_NODEV|MS_NOEXEC
-mount = /var/lib/ml_core/opencl_cache,/var/lib/ml_core/opencl_cache,none,MS_BIND|MS_REC
+bind-mount = /var/lib/ml_core/opencl_cache,,1
 mount = /run/imageloader,/run/imageloader,none,MS_BIND|MS_REC|MS_NOSUID|MS_NODEV
 mount = /run/camera,/run/camera,none,MS_BIND|MS_REC|MS_NOSUID|MS_NODEV
 bind-mount = /sys/dev/char
