camera, ml_core: Use OpenVINO caching for effects
dev-libs/ml-core exports /etc/ml_core/stable_delegate_settings.json
with OpenVINO cache settings.

Camera uses this instead of /etc/tflite/settings.json to load effects
with NPU. This speeds up effects initialization.

BUG=b:356770559
TEST=[chroot] emerge & deploy dev-libs/ml-core cros-camera cros-camera-libs
TEST=[dut] start ml-core-cacher && restart cros-camera
TEST=[dut] Check frame drops on camera open + VC + NPU

Change-Id: Ieeabee6df425b89503d1402425c93ab25c3e168c
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5788742
Reviewed-by: Shik Chen <shik@chromium.org>
Tested-by: Imran Ziad <imranziad@chromium.org>
Commit-Queue: Imran Ziad <imranziad@chromium.org>

--- a/ml_core/BUILD.gn
+++ b/ml_core/BUILD.gn
@@ -15,6 +15,10 @@ group("all") {
   ]
   if (use.camera_feature_effects) {
     deps += [ "//ml_core/cacher:all" ]
+
+    if (use.intel_openvino_delegate) {
+      deps += [ ":install_stable_delegate_settings" ]
+    }
   }
 
   # Need to do always, as some deps are for clients.
@@ -99,4 +103,9 @@ install_config("unittest_deps") {
                  "package/root/libcros_ml_core_internal.so" ]
   }
   install_path = "/build/share/ml_core/"
+}
+
+install_config("install_stable_delegate_settings") {
+  sources = [ "stable_delegate_settings.json" ]
+  install_path = "/etc/ml_core"
 }
