--- a/camera/hal_adapter/init/cros-camera.conf
+++ b/camera/hal_adapter/init/cros-camera.conf
@@ -96,19 +96,19 @@ script
   # The path only exists on NPU-enabled devices, so we mount it conditionally.
   NPU_ARGS=''
   if [ -d /etc/openvino ]; then
-    NPU_ARGS='-b /etc/openvino'
+    NPU_ARGS="$NPU_ARGS -b /etc/openvino"
+  fi
+
+  # Need access to /etc/ml_core to read stable delegate settings file. The path
+  # only exists on accelerator-enabled devices, so we mount it conditionally.
+  if [ -d /etc/ml_core ]; then
+    NPU_ARGS="$NPU_ARGS -b /etc/ml_core"
+
     # Need access to /var/lib/ml_core/openvino_cache to read effects
     # OpenVINO models cache.
     if [ -d /var/lib/ml_core/openvino_cache ]; then
       NPU_ARGS="$NPU_ARGS -b /var/lib/ml_core/openvino_cache"
     fi
-  fi
-
-  # Need access to /etc/tflite to read stable delegate settings file. The path
-  # only exists on accelerator-enabled devices, so we mount it conditionally.
-  TFLITE_ARGS=''
-  if [ -d /etc/tflite ]; then
-    TFLITE_ARGS='-b /etc/tflite'
   fi
 
   exec minijail0 -i -u arc-camera -g arc-camera -G \
@@ -119,7 +119,6 @@ script
       -b /var/lib/timezone -b /dev/shm,,1 \
       -b /var/lib/ml_core/opencl_cache \
       ${NPU_ARGS} \
-      ${TFLITE_ARGS} \
       -k 'tmpfs,/run,tmpfs,MS_NOSUID|MS_NODEV|MS_NOEXEC' \
       -k '/run/imageloader,/run/imageloader,none,MS_BIND|MS_REC|MS_NOSUID|MS_NODEV' \
       -b /run/perfetto,,1 -b /run/camera,,1 -b "${SERVER_TOKEN_DIR}" \
