diagnostics: Extract thermal sensor fetcher from DelegateImpl
BUG=none
TEST=FEATURES=test emerge-volteer diagnostics

Change-Id: Iecbd1edcd1609b231bbc0a06265e1c3dba767450
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5790162
Reviewed-by: Ethan Cheng <yycheng@google.com>
Commit-Queue: Wei-Luan Wang <weiluanwang@google.com>
Commit-Queue: ChromeOS Auto Runner <chromeos-auto-runner@chromeos-bot.iam.gserviceaccount.com>
Tested-by: Wei-Luan Wang <weiluanwang@google.com>

--- a/diagnostics/cros_healthd/delegate/fetchers/BUILD.gn
+++ b/diagnostics/cros_healthd/delegate/fetchers/BUILD.gn
@@ -8,6 +8,7 @@ source_set("fetchers") {
     "display_fetcher.cc",
     "graphics_fetcher.cc",
     "psr_fetcher.cc",
+    "thermal_fetcher.cc",
     "touchpad_fetcher.cc",
   ]
   libs = [ "bootstat" ]
@@ -19,6 +20,7 @@ source_set("fetchers") {
   pkg_deps = [
     "egl",
     "glesv2",
+    "libec",
     "libmetrics",
     "re2",
   ]
