rmad: Use power_manager-client to invoke methods
This CL applies power_manager-clients to rmad to invoke
power_manager methods in a more elegant way.

BUG=b:314070523
TEST=Manually test on Nissa to restart and shutdown in Shimless RMA
TEST=FEATURES=test USE=asan emerge-amd64-generic chromeos-base/rmad
TEST=FEATURES=test emerge-nissa chromeos-base/rmad

Change-Id: Ia8aedc412753e6dc206f6b727e479159a7f831b7
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5790171
Commit-Queue: Jeff Lin <jeffulin@google.com>
Tested-by: Jeff Lin <jeffulin@google.com>
Reviewed-by: Kevin Lin <kevinptt@chromium.org>

--- a/rmad/system/BUILD.gn
+++ b/rmad/system/BUILD.gn
@@ -13,6 +13,7 @@ pkg_config("target_defaults") {
     "libbrillo",
     "libchrome",
     "libdevice_management-client",
+    "libpower_manager-client",
     "libruntime_probe-client",
     "libshill-client",
     "libtpm_manager-client",
@@ -37,6 +38,7 @@ if (use.test) {
   pkg_config("test_pkg_deps") {
     pkg_deps = [
       "libdevice_management-client-test",
+      "libpower_manager-client-test",
       "libruntime_probe-client-test",
       "libshill-client-test",
       "libtpm_manager-client-test",
