resourced: specify tokio version
In versions of Rust before 1.79, this code implied `version = "*"` and
caused Cargo to warn. It's now an error, so make the `version = "*"`
explicit. A specific version of tokio was picked in the non-dev deps
section above, anyway.

BUG=b:347163568
TEST=CQ

Change-Id: If07fd9f660efa14b8b0c93061fc7834e251ec3d4
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5792026
Tested-by: George Burgess <gbiv@chromium.org>
Reviewed-by: Shah Hossain <shahadath@google.com>
Commit-Queue: George Burgess <gbiv@chromium.org>

--- a/resourced/Cargo.toml
+++ b/resourced/Cargo.toml
@@ -44,9 +44,7 @@ lazy_static = "1.4"
 
 [dev-dependencies]
 tempfile = "3"
-
-[dev-dependencies.tokio]
-features = ["test-util"]
+tokio = { version = "*", features = ["test-util"] }
 
 [target.'cfg(target_arch = "x86_64")'.dependencies]
 grpcio = { version = "0.9.1", optional = true}
