--- a/diagnostics/cros_healthd/delegate/events/BUILD.gn
+++ b/diagnostics/cros_healthd/delegate/events/BUILD.gn
@@ -26,6 +26,7 @@ if (use.test) {
       "audio_jack_evdev_delegate_test.cc",
       "power_button_evdev_delegate_test.cc",
       "stylus_garage_evdev_delegate_test.cc",
+      "touchpad_evdev_delegate_test.cc",
       "volume_button_evdev_delegate_test.cc",
     ]
     pkg_deps = [
