diagnostics: Add unit tests for touchscreen evdev delegate
BUG=b:322268929
TEST=FEATURES=test emerge-volteer diagnostics

Change-Id: I3e705ad38d17b3544fd633f14c5884e106f994c4
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5790237
Reviewed-by: Kerker Yang <kerker@chromium.org>
Commit-Queue: Wei-Luan Wang <weiluanwang@google.com>
Tested-by: Wei-Luan Wang <weiluanwang@google.com>

--- a/diagnostics/cros_healthd/delegate/events/BUILD.gn
+++ b/diagnostics/cros_healthd/delegate/events/BUILD.gn
@@ -27,6 +27,7 @@ if (use.test) {
       "power_button_evdev_delegate_test.cc",
       "stylus_garage_evdev_delegate_test.cc",
       "touchpad_evdev_delegate_test.cc",
+      "touchscreen_evdev_delegate_test.cc",
       "volume_button_evdev_delegate_test.cc",
     ]
     pkg_deps = [
