diagnostics: Add unit tests for stylus evdev delegate
BUG=b:322268929
TEST=FEATURES=test emerge-volteer diagnostics

Change-Id: Ic3e4222d8bb51de3e07f2111d7ff392add5bfccf
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5782811
Reviewed-by: Kerker Yang <kerker@chromium.org>
Commit-Queue: Wei-Luan Wang <weiluanwang@google.com>
Tested-by: Wei-Luan Wang <weiluanwang@google.com>

--- a/diagnostics/cros_healthd/delegate/events/BUILD.gn
+++ b/diagnostics/cros_healthd/delegate/events/BUILD.gn
@@ -25,6 +25,7 @@ if (use.test) {
     sources = [
       "audio_jack_evdev_delegate_test.cc",
       "power_button_evdev_delegate_test.cc",
+      "stylus_evdev_delegate_test.cc",
       "stylus_garage_evdev_delegate_test.cc",
       "touchpad_evdev_delegate_test.cc",
       "touchscreen_evdev_delegate_test.cc",
