cros-disks: Code cleanup
No functional change.

Combed some #includes.
Removed some TODO comments.
Fixed some typos in logs and comments.

BUG=None
TEST=CQ

Change-Id: I82908d4a43a1738c8f73f39f7dc4b9d7b77d0e82
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5796178
Reviewed-by: Ben Reich <benreich@chromium.org>
Auto-Submit: François Degros <fdegros@chromium.org>
Commit-Queue: François Degros <fdegros@chromium.org>
Tested-by: François Degros <fdegros@chromium.org>
Commit-Queue: Ben Reich <benreich@chromium.org>

--- a/cros-disks/minijail/cros-disks.conf
+++ b/cros-disks/minijail/cros-disks.conf
@@ -7,14 +7,11 @@
 #   DBus.
 #
 # - Remain in the original cgroup namespace as it isn't supported on systems
-#   running kernel 3.8. TODO(benchan): Put cros-disks in new cgroup namespace
-#   once all systems support it.
+#   running kernel 3.8.
 #
 # - Temporarily skip new mount (-v) and PID (-p) namespace as cros-disks
 #   needs to access /home/user/<hash> for archive support, which isn't
-#   accessible inside a new mount namespace. TODO(benchan): Put cros-disks in
-#   new mount and PID namespace after archive support in cros-disks is
-#   deprecated (chromium:707327).
+#   accessible inside a new mount namespace.
 #
 # - To let upstart track the cros-disks process properly according to the
 #   'expect fork' stanza, Minijail exits immediately after fork (-i) while
