mini_udisks: Start before fwupd
When the uefi USE flag is enabled, fwupd needs mini_udisks running so it
can send it a D-Bus query. Update the upstart conf so that mini_udisks
is started before fwupd, and shut it down when fwupd is shut down.

Tested in combination with https://crrev.com/c/5361285.

BUG=b:361397619
TEST=cros_workon start chromeos-base/mini_udisks
TEST=cros build-packages, cros build-image
TEST=Run on DUT, verify mini_udisks and fwupd are running

Change-Id: Ifeb40b07b8ea42334962f669cfaa9241b25fee8b
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5804169
Commit-Queue: Nicholas Bishop <nicholasbishop@google.com>
Tested-by: Nicholas Bishop <nicholasbishop@google.com>
Auto-Submit: Nicholas Bishop <nicholasbishop@google.com>
Reviewed-by: Jeffery Miller <jefferymiller@google.com>
Commit-Queue: Jeffery Miller <jefferymiller@google.com>

--- a/mini_udisks/upstart/mini_udisks.conf
+++ b/mini_udisks/upstart/mini_udisks.conf
@@ -5,8 +5,8 @@
 description     "Daemon that provides a minimal UDisks2 D-Bus API"
 author          "chromium-os-dev@chromium.org"
 
-start on starting system-services
-stop on stopping system-services
+start on starting fwupd
+stop on stopped fwupd
 respawn
 
 oom score -100
