diagnostics: Rename 'V2' in the code of LED and urandom routine
V1 counterparts in LED and urandom routines no longer exists, therefore
the term 'V2' is redundant now. Remove the phrase in code and also
rename some file names to correspond that.

BUG=b:337173417
TEST=running local unit tests

Change-Id: Icfefe770067993fa4f862a066b7c2f5cd117ec95
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5802693
Reviewed-by: Wei-Luan Wang <weiluanwang@google.com>
Tested-by: Hsincheng Hou <dihimono@google.com>
Commit-Queue: Hsincheng Hou <dihimono@google.com>

--- a/diagnostics/cros_healthd/routines/memory_and_cpu/BUILD.gn
+++ b/diagnostics/cros_healthd/routines/memory_and_cpu/BUILD.gn
@@ -17,7 +17,7 @@ source_set("memory_and_cpu") {
     "floating_point.cc",
     "memory.cc",
     "prime_search.cc",
-    "urandom_v2.cc",
+    "urandom.cc",
   ]
   configs += [ ":memory_and_cpu_pkg_config" ]
   public_deps = [ "//diagnostics/cros_healthd/routines:utils" ]
@@ -36,7 +36,7 @@ if (use.test) {
       "floating_point_test.cc",
       "memory_test.cc",
       "prime_search_test.cc",
-      "urandom_v2_test.cc",
+      "urandom_test.cc",
     ]
     configs += [ ":memory_and_cpu_pkg_config" ]
     deps = [
