secagentd: split out image and process cache
Make image cache its own class, this will be useful for use in the
FilePlugin class.

BUG=b:336870094
TEST=unit test passes for process cache.

Change-Id: Ie7d3e3e9db1729a50e415745c1b566a82611be89
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5807458
Auto-Submit: Jason Ling <jasonling@chromium.org>
Tested-by: Jason Ling <jasonling@chromium.org>
Reviewed-by: Princy Agrawal <princya@google.com>
Reviewed-by: Aashay Shringarpure <aashay@google.com>
Commit-Queue: Jason Ling <jasonling@chromium.org>

--- a/secagentd/BUILD.gn
+++ b/secagentd/BUILD.gn
@@ -103,6 +103,7 @@ static_library("libsecagent") {
     "device_user.cc",
     "factories.cc",
     "file_plugin.cc",
+    "image_cache.cc",
     "message_sender.cc",
     "metrics_sender.cc",
     "network_plugin.cc",
