odml: Add coral service mojoms
Add the mojom definition that will be used in the coral service.

BUG=b:358531135
TEST=build ok

Change-Id: Ia442d7ceb8987defffb924585914e01645f30037
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5806089
Reviewed-by: Yi Chou <yich@google.com>
Tested-by: Howard Yang <hcyang@google.com>
Reviewed-by: Cheng-Yu Lee <cylee@google.com>
Reviewed-by: Takashi Toyoshima <toyoshim@chromium.org>
Commit-Queue: ChromeOS Auto Retry <chromeos-auto-retry@chromeos-bot.iam.gserviceaccount.com>

--- a/odml/BUILD.gn
+++ b/odml/BUILD.gn
@@ -58,10 +58,12 @@ generate_mojom_bindings("mojo_bindings") {
     use_pic = true
   }
   sources = [
+    "mojom/coral_service.mojom",
     "mojom/file.mojom",
     "mojom/on_device_model.mojom",
     "mojom/on_device_model_service.mojom",
     "mojom/read_only_file.mojom",
+    "mojom/url.mojom",
     "mojom/uuid.mojom",
   ]
   mojo_extra_args = [
@@ -91,6 +93,7 @@ source_set("mojo_bindings_lib") {
 
 source_set("odml") {
   sources = [
+    "coral/service.cc",
     "on_device_model/ml/chrome_ml.cc",
     "on_device_model/ml/gpu_blocklist.cc",
     "on_device_model/ml/on_device_model_executor.cc",
