lorgnette: add OptionDescriptorTest
This is a new test suite to validate low-level SANE options for
scanner backends.

BUG=b:346843712
TEST=sane_backend_wwcb_tests --scanner=pfufs:fi-7160:A36DH60979

Change-Id: Iecbd449dab022506f3adcd9531cb1db6ea710387
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5804679
Tested-by: Paul Moy <pmoy@chromium.org>
Commit-Queue: Paul Moy <pmoy@chromium.org>
Reviewed-by: Aaron Massey <aaronmassey@google.com>

--- a/lorgnette/BUILD.gn
+++ b/lorgnette/BUILD.gn
@@ -160,6 +160,7 @@ install_config("install_minijail_config") {
 executable("sane_backend_wwcb_tests") {
   sources = [
     "sane_backend_tests/main.cc",
+    "sane_backend_tests/option_descriptor_test.cc",
     "sane_backend_tests/scan_test.cc",
   ]
   configs += [
