--- a/resourced/tmpfiles.d/on-demand/resourced.conf
+++ b/resourced/tmpfiles.d/on-demand/resourced.conf
@@ -9,6 +9,7 @@ z- /sys/devices/system/cpu/cpufreq/ondemand/sampling_rate 0644 resourced resourc
 z- /sys/devices/system/cpu/cpufreq/policy*/energy_performance_pref* 0644 resourced resourced
 z- /sys/devices/system/cpu/cpufreq/boost 0644 resourced resourced
 z- /sys/devices/system/cpu/cpu*/online 0644 resourced resourced
+z- /sys/kernel/debug/sched/fair_server/cpu*/* 0644 resourced resourced
 z- /sys/kernel/debug/sched/base_slice_ns 0644 resourced resourced
 z- /sys/kernel/mm/lru_gen/enabled 0644 resourced resourced
 z- /sys/kernel/mm/transparent_hugepage/enabled 0644 resourced resourced
