odml: Instantiate coral service
And make it hold a ref to the on device platform service.

BUG=b:358531135
TEST=odml unittests

Cq-Depend: chromium:5825973
Change-Id: I6983367efd4fc4646ec9db79c9d64d51cff1fb03
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5811643
Tested-by: Howard Yang <hcyang@google.com>
Commit-Queue: Howard Yang <hcyang@google.com>
Reviewed-by: Yi Chou <yich@google.com>
Reviewed-by: Eric Caruso <ejcaruso@chromium.org>

--- a/odml/odmld.jsonc
+++ b/odml/odmld.jsonc
@@ -3,19 +3,22 @@
   {
     "identity": "u:r:cros_odml_service:s0",
     "own": [
-      "CrosOdmlService"
+      "CrosOdmlService",
+      "CrosCoralService"
     ]
   },
   {
     "identity": "u:r:cros_browser:s0",
     "request": [
-      "CrosOdmlService"
+      "CrosOdmlService",
+      "CrosCoralService"
     ]
   },
   {
     "identity": "u:r:cros_ssh_session:s0",
     "request": [
-      "CrosOdmlService"
+      "CrosOdmlService",
+      "CrosCoralService"
     ]
   }
 ]
