installer: Add standard panic handler to rust wrapper
First-party rust bins use this panic handler to improve crash info.

BUG=b:356344778
TEST=emerge-reven chromeos-installer

Cq-Depend: chromium:5823569
Change-Id: Idc87cec3023552294ab516533391e1082980511a
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5823848
Tested-by: Ted Brandston <tbrandston@google.com>
Reviewed-by: Nicholas Bishop <nicholasbishop@google.com>
Commit-Queue: Ted Brandston <tbrandston@google.com>

--- a/installer/Cargo.toml
+++ b/installer/Cargo.toml
@@ -8,6 +8,7 @@ include = [
 ]
 
 [dependencies]
+libchromeos = { path = "../libchromeos-rs" } # provided by ebuild
 nix = { version = "0.28.0", features = ["user"]}
 
 [[bin]]
