resourced: Add discard type to Chrome memory pressure signal
And add D-Bus method SetMemoryMargins to set the margins for determining
the discard type in the signal.

BUG=b:362868469
TEST=tast run $DUT_IP resourced.MemoryPressureSignal

Change-Id: Iff3a0f695bc9bcb383cd95618e1c47a14f7ab453
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5825375
Commit-Queue: Vovo Yang <vovoy@chromium.org>
Reviewed-by: David Stevens <stevensd@chromium.org>
Tested-by: Vovo Yang <vovoy@chromium.org>

--- a/resourced/dbus/org.chromium.ResourceManager.conf
+++ b/resourced/dbus/org.chromium.ResourceManager.conf
@@ -48,6 +48,9 @@
            send_member="SetGameModeWithTimeout"/>
     <allow send_destination="org.chromium.ResourceManager"
            send_interface="org.chromium.ResourceManager"
+           send_member="SetMemoryMargins"/>
+    <allow send_destination="org.chromium.ResourceManager"
+           send_interface="org.chromium.ResourceManager"
            send_member="SetMemoryMarginsBps"/>
     <allow send_destination="org.chromium.ResourceManager"
            send_interface="org.chromium.ResourceManager"
