pciguard: The mount-encrypted service dependency removed from pciguard-insecuremode.conf.
As chromeos-startup no longer forks mount-encrypted, the dependency needs
to be removed from pciguard-insecuremode.conf. This adjustment is necessary
to ensure pciguard-insecuremode can start and run properly. The change is
required due to the following update:
https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5750920
debugd: Remove mount-encrypted

BUG=b:362899417
TEST=reboot in secure/insecure mode; plug/unplug tbt3/4 device

Change-Id: I2b6900487dab9e736a5b4f32260319084286c96c
Signed-off-by: Jignesh Patel <jignesh1.patel@intel.com>
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5825376
Reviewed-by: Daniel Matei <danielgeorgem@google.com>
Tested-by: Jignesh Patel <jignesh1.patel@intel.corp-partner.google.com>
Reviewed-by: Aashay Shringarpure <aashay@google.com>
Reviewed-by: Jignesh Patel <jignesh1.patel@intel.corp-partner.google.com>

--- a/pciguard/insecure-mode/pciguard-insecuremode.conf
+++ b/pciguard/insecure-mode/pciguard-insecuremode.conf
@@ -2,8 +2,7 @@
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
 
-# We need to wait in order to perform mode file check.
-start on started mount-encrypted
+start on started system-services
 
 description "Task to disable/enable pciguard on startup on test images"
 author      "chromium-os-dev@chromium.org"
