diagnostics: Add DisplayUtil and DisplayUtilFactory interfaces
Add the abstract interfaces for easier mocking in unit tests.

BUG=b:299559201
TEST=FEATURES=test emerge-volteer diagnostics

Change-Id: Ia45a6039fb07dbe67e66f33fdbd6cfa1014d1570
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5828683
Reviewed-by: Byron Lee <byronlee@chromium.org>
Commit-Queue: Wei-Luan Wang <weiluanwang@google.com>
Tested-by: Wei-Luan Wang <weiluanwang@google.com>

--- a/diagnostics/cros_healthd/delegate/BUILD.gn
+++ b/diagnostics/cros_healthd/delegate/BUILD.gn
@@ -45,7 +45,10 @@ executable("delegate") {
     "//diagnostics/cros_healthd/welco_ec/*",
   ]
   install_path = "/usr/libexec/diagnostics"
-  deps = [ ":libexecutor_delegate" ]
+  deps = [
+    ":libexecutor_delegate",
+    "//diagnostics/cros_healthd/delegate/utils",
+  ]
 }
 
 if (use.test) {
