diagnostics: Add unit tests for PSR enum converter functions
BUG=b:299559199
TEST=FEATURES=test emerge-volteer diagnostics

Change-Id: Idbbe7d5d80838a0ba23c0c7aece59a3f6d9fe442
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5831901
Commit-Queue: Wei-Luan Wang <weiluanwang@google.com>
Tested-by: Wei-Luan Wang <weiluanwang@google.com>
Reviewed-by: Kerker Yang <kerker@chromium.org>

--- a/diagnostics/cros_healthd/delegate/fetchers/BUILD.gn
+++ b/diagnostics/cros_healthd/delegate/fetchers/BUILD.gn
@@ -39,6 +39,7 @@ if (use.test) {
     sources = [
       "boot_performance_test.cc",
       "graphics_fetcher_test.cc",
+      "psr_fetcher_test.cc",
       "touchpad_fetcher_test.cc",
     ]
     pkg_deps = [
