--- a/vm_tools/concierge/config/arcvm_dev.conf
+++ b/vm_tools/concierge/config/arcvm_dev.conf
@@ -16,5 +16,5 @@
 ################################################################################
 
 # Add serial-based earlycon and virtio-console logging.
---serial=type=syslog,hardware=serial,num=1,earlycon=true
---serial=type=syslog,hardware=virtio-console,num=1,console=true
+# --serial=type=syslog,hardware=serial,num=1,earlycon=true
+# --serial=type=syslog,hardware=virtio-console,num=1,console=true
