odml: implement agglomerative algorithm for coral clustering.
Add a self-contained implementation of the agglomerative clustering algorithm.

BUG=b:361429770
TEST=odml unittests

Change-Id: Ia43be9bb877b0d1e03145273c8c601a904025559
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5829586
Tested-by: Cheng-Yu Lee <cylee@google.com>
Reviewed-by: Yi Chou <yich@google.com>
Reviewed-by: Howard Yang <hcyang@google.com>
Commit-Queue: Cheng-Yu Lee <cylee@google.com>

--- a/odml/BUILD.gn
+++ b/odml/BUILD.gn
@@ -96,6 +96,7 @@ source_set("mojo_bindings_lib") {
 
 source_set("coral") {
   sources = [
+    "coral/clustering/agglomerative_clustering.cc",
     "coral/clustering/engine.cc",
     "coral/embedding/engine.cc",
     "coral/service.cc",
@@ -197,7 +198,10 @@ if (use.test) {
   }
 
   executable("coral_testrunner") {
-    sources = [ "coral/service_test.cc" ]
+    sources = [
+      "coral/clustering/agglomerative_clustering_test.cc",
+      "coral/service_test.cc",
+    ]
     configs += [
       "//common-mk:test",
       ":target_defaults",
