diagnostics: Create UrandomDelegate class and add unit tests
Extract the implementation into a single class for better testability.

BUG=b:299558942
TEST=FEATURES=test emerge-volteer diagnostics
TEST=cros-health-tool diag urandom

Change-Id: I93a3a362b194c2f668864dc0a96e10a5e70dd651
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5826443
Commit-Queue: Wei-Luan Wang <weiluanwang@google.com>
Reviewed-by: Ethan Cheng <yycheng@google.com>
Tested-by: Wei-Luan Wang <weiluanwang@google.com>

--- a/diagnostics/cros_healthd/delegate/routines/BUILD.gn
+++ b/diagnostics/cros_healthd/delegate/routines/BUILD.gn
@@ -6,8 +6,10 @@ source_set("routines") {
   sources = [
     "floating_point_accuracy.cc",
     "prime_number_search_delegate_impl.cc",
+    "urandom_delegate.cc",
   ]
   pkg_deps = [ "libchrome" ]
+  deps = [ "//diagnostics/base" ]
 }
 
 if (use.test) {
@@ -15,10 +17,13 @@ if (use.test) {
     sources = [
       "floating_point_accuracy_test.cc",
       "prime_number_search_delegate_impl_test.cc",
+      "urandom_delegate_test.cc",
     ]
     deps = [
       ":routines",
       "//diagnostics/base:healthd_testrunner",
+      "//diagnostics/base:test_support",
     ]
+    pkg_deps = [ "libchrome" ]
   }
 }
